logo stretch correction

--- a/components/Navbar/Navbar.scss
+++ b/components/Navbar/Navbar.scss
@@ -20,19 +20,8 @@
 
     .navbar-logo {
       height: 100%;
-
-      > span {
-        height: 100% !important;
-        width: 100% !important;
-        position: relative !important;
-        display: unset !important;
-
-        img {
-          position: relative !important;
-          width: 100% !important;
-          height: 100% !important;
-        }
-      }
+      width: 6rem;
+      position: relative;
     }
 
     .nav-menu {
